--- a/GraphicPlayground/DistortionAnalyser.csproj
+++ b/GraphicPlayground/DistortionAnalyser.csproj
@@ -54,13 +54,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DotCollisionDetector.cs" />
-    <Compile Include="DialogHostMediator.cs" />
+    <Compile Include="HostMediator.cs" />
+    <Compile Include="Scope.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Scope.Designer.cs">
+      <DependentUpon>Scope.cs</DependentUpon>
+    </Compile>
     <Compile Include="Star.cs" />
     <Compile Include="IHost.cs" />
     <Compile Include="DirectionalDot.cs" />
     <Compile Include="WorldsCollide.cs" />
     <Compile Include="DoubleBufferPlayground.cs">
-      <SubType>Form</SubType>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="DoubleBufferPlayground.Designer.cs">
       <DependentUpon>DoubleBufferPlayground.cs</DependentUpon>
