--- a/DistortionAnalyser/DistortionAnalyser.csproj
+++ b/DistortionAnalyser/DistortionAnalyser.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{011C6BC6-475A-4C7C-AD08-7DA532147399}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>GraphicPlayground</RootNamespace>
-    <AssemblyName>GraphicPlayground</AssemblyName>
+    <RootNamespace>DistortionAnalyser</RootNamespace>
+    <AssemblyName>DistortionAnalyser</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -53,24 +53,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DotCollisionDetector.cs" />
     <Compile Include="HostMediator.cs" />
-    <Compile Include="Scope.cs">
+    <Compile Include="Scope.cs" />
+    <Compile Include="Screen.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Scope.Designer.cs">
-      <DependentUpon>Scope.cs</DependentUpon>
+    <Compile Include="Screen.Designer.cs">
+      <DependentUpon>Screen.cs</DependentUpon>
     </Compile>
+    <Compile Include="Signal.cs" />
     <Compile Include="Star.cs" />
     <Compile Include="IHost.cs" />
     <Compile Include="DirectionalDot.cs" />
     <Compile Include="WorldsCollide.cs" />
-    <Compile Include="DoubleBufferPlayground.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="DoubleBufferPlayground.Designer.cs">
-      <DependentUpon>DoubleBufferPlayground.cs</DependentUpon>
-    </Compile>
     <Compile Include="Explosion.cs" />
     <Compile Include="RandomDot.cs" />
     <Compile Include="Form1.cs">
@@ -84,9 +79,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DoubleBufferPlayground.resx">
-      <DependentUpon>DoubleBufferPlayground.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
