--- a/DistortionAnalyser/DistortionAnalyser.csproj
+++ b/DistortionAnalyser/DistortionAnalyser.csproj
@@ -54,6 +54,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HostMediator.cs" />
+    <Compile Include="Differientiator.cs" />
+    <Compile Include="ModelsDrawer.cs" />
     <Compile Include="Scope.cs" />
     <Compile Include="Screen.cs">
       <SubType>UserControl</SubType>
@@ -62,12 +64,7 @@
       <DependentUpon>Screen.cs</DependentUpon>
     </Compile>
     <Compile Include="Signal.cs" />
-    <Compile Include="Star.cs" />
     <Compile Include="IHost.cs" />
-    <Compile Include="DirectionalDot.cs" />
-    <Compile Include="WorldsCollide.cs" />
-    <Compile Include="Explosion.cs" />
-    <Compile Include="RandomDot.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +87,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Screen.resx">
+      <DependentUpon>Screen.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
